# deep_agent_twr

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_agent.ipynb  teste_tools.ipynb
app/: deep_agent.py
app/agents/: deep_router_agent.py  ml_analyst_agent.py
app/agents/prompts/: deep_agent_prompt.py  deep_router_prompt.py  metrics_analyst.py  ml_analist_prompt.py  orchestrator.py  system_rules.py
app/config/: container.py  database.py  mongo.py  settings.py
app/mentor_net/: history_buffer.py  http_data.py  mentor_preditor.py  mentornet.py  noisy_scaner.py  spl.py  student_mlp.py  trainer.py
app/mentor_net/scripts/: training.py
app/repositories/: mongo_repository.py  sql_repository.py
app/services/: campaign_service.py  embedding_service.py  ml_noise_service.py  request_service.py
app/tools/: context_store.py  data_tools.py  metrics_agent_tools.py  ml_tool.py  mongo_tools.py  planning_tools.py  pydantic_models.py  settings.py  sql_tools.py
app/utils/: http_tokens_ft.py
tool_outputs/: mongo_requests_174f3109ef054d1abe8005604946e095.json  mongo_requests_201336ba524442319c45f43d34187f73.json  mongo_requests_3e5f5a8289af466f833a0a19c9d82625.json  mongo_requests_6f697d4826ae486f9260fda29f03c540.json  mongo_requests_7dc95cf6416b4ba38966f4398c0b4dbf.json  mongo_requests_ddf2d203c23d469d9b50a9eb3013852f.json  mongo_requests_ec94b11aacc84aa0a13c3d14e9d743da.json
