[project]
name = "deep-agents-twr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "deepagents>=0.3.12",
    "gensim>=4.4.0",
    "langchain>=1.2.9",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.8",
    "langgraph>=1.0.8",
    "matplotlib>=3.10.8",
    "motor>=3.7.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "rich>=14.3.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "sqlalchemy>=2.0.46",
    "torch>=2.10.0",
    "typing>=3.10.0.0",
    "user-agents>=2.2.0",
]
